# my_scientific_profile

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  netlify.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: all_my_papers.ipynb  all_papers_specific_orcid.ipynb  authors.ipynb  specific_dois.ipynb
my_scientific_profile/: __init__.py  config_default.yaml  utils.py
my_scientific_profile/authors/: authors.py
my_scientific_profile/config/: authors.yaml  config.py  papers.yaml  required_environment_variables.py  required_environment_variables.yaml  util.py
my_scientific_profile/crossref/: utils.py  works.py
my_scientific_profile/database/: authors.py  aws_s3.py  papers.py  utils.py
my_scientific_profile/doi2bib/: doi2bib.py
my_scientific_profile/orcid/: authors.py  detailed_work.py  employments.py  utils.py  works.py
my_scientific_profile/papers/: open_access.py  papers.py
my_scientific_profile/search/: search.py
notebooks/: .mapbox_token  Untitled.ipynb  all_papers.csv  all_papers.json  author_works.ipynb  bert.ipynb  dataclass_json.ipynb  gen_quarto.ipynb  map.ipynb  pdf_images.ipynb  scopus_api.ipynb  test_author_info.ipynb  test_crossref.ipynb  test_paper_info.ipynb  test_scholarly.ipynb  test_search.ipynb  test_semantic.ipynb  test_whoosh.ipynb
quarto_website/: _publish.yml  _quarto.yml  about.qmd  contact.qmd  group.qmd  group_members.qmd  header_email.html  header_goatcounter.html  index.css  index.qmd  notes.qmd  papers.qmd  positions.qmd  research_landscape.qmd  research_topics.ipynb  research_topics.qmd  styles.css  team.qmd  theme.scss
scripts/: embed_papers.py  fetch_papers.py  generate_publications_yaml.py  generate_quarto_pages.py  orcid_access_token.py
tests/: __init__.py  test_my_scientific_profile.py
web_app/: __init__.py
(+196 files in other folders)
