[tool.poetry]
name = "my-scientific-profile"
version = "0.1.0"
description = ""
authors = ["Tristan Bereau <bereau@thphys.uni-heidelberg.de>"]
readme = "README.rst"
packages = [{include = "my_scientific_profile"}]

[tool.poetry.dependencies]
python = "^3.10"
isort = "^5.12.0"
jupyter = "^1.0.0"
ipyleaflet = "^0.17.2"
nltk = "^3.8.1"
pandas = "^2.0.3"
pydantic = "^2.0"
unidecode = "^1.3.6"
pyhumps = "^3.8.0"
python-decouple = "^3.8"
xmltodict = "^0.13.0"
pymongo = "^4.4.0"
plotly = "^5.15.0"
bokeh = "^3.2.0"
boto3 = "^1.26.165"
setuptools = "^68.0.0"
nbformat = "^5.9.0"
typing-extensions = "4.6.3"
matplotlib = "^3.7.1"
confuse = "^2.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
